# Sorting-Algorithms

./: .gitmodules  CMakeLists.txt
include/: sorts.h  stats.h  tests.h  utils.h
src/: main.c  utils.c
src/helpers/: stats.c  tests.c  utils.c
src/sorts/: bubble_sort.c  counting_sort.c  insertion_sort.c  merge_sort.c  quick_sort.c  selection_sort.c
tests/: main.c
tests/sorts/: bubble_sort_test.c  counting_sort_test.c  insertion_sort_test.c  merge_sort_test.c  quick_sort_test.c  selection_sort_test.c  sorts_tests.c
